# memtrace

./: .gitignore  Cargo.toml  README.md  readwrite.c  readwrite.py  rw
src/: bin.rs  fd.rs  main.rs  procinfo.rs  syscalls.rs
