[package]
name = "memtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
nix = { version = "0.26.2", features = ["ptrace"] }
nom = "7.1.3"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
